<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#0099FF"
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/login_layout_bg"
        android:padding="15dp"
    	android:layout_margin="15dp"
        >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/user_id" 
	       	android:textSize="20sp"
	       	/>
	   	<EditText 
	       	android:id="@+id/user_id"
	       	android:layout_width="fill_parent"
	       	android:layout_height="wrap_content"
        	android:hint="@string/user_id_hint"
	       	android:textSize="20sp"
	       	/>
	    <TextView
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:text="@string/pwd" 
        	android:textSize="20sp"
        	/>
	    <EditText 
	       	android:id="@+id/pwd"
	       	android:layout_width="fill_parent"
	       	android:layout_height="wrap_content"
	       	android:inputType="textPassword"
	        android:textSize="20sp"
	       	/>
		<Button
		    android:id="@+id/btLogin"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/login"
		    android:background="@drawable/blue_button"
		    android:layout_marginLeft="200dp"
		    />
    </LinearLayout>
	<Button 
	    android:id="@+id/btRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/register_new_user"
	    />
</LinearLayout>
