<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView 
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/register_user_phone_number"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <EditText 
                android:id="@+id/evRegister_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView 
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <EditText 
                android:id="@+id/evRegister_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView 
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/register_password_confirm"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <EditText 
                android:id="@+id/evPassword_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView 
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/register_nike_name"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <EditText 
                android:id="@+id/evRegister_nikeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:hint="@string/register_nike_name"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView 
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/register_sex"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <EditText 
                android:id="@+id/evRegister_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:hint="@string/register_hint_sex"/>
        </LinearLayout>

        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView 
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/register_school"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <EditText 
                android:id="@+id/evRegister_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:hint="@string/register_hint_school"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView 
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/register_admission_year"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
            <EditText 
                android:id="@+id/evRegister_admissionYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:hint="@string/register_hint_admission_year"/>
        </LinearLayout>
        <Button 
            android:id="@+id/btRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_button"
            android:textSize="20sp"
            android:background="@drawable/blue_button"/>
    </LinearLayout>
</ScrollView>
