<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFFFF">

        <TextView
            android:id="@+id/tab_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/first_page_focus"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tab_neighbor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/first_page_neighbor"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tab_my_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/first_page_created"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>
    <ImageView 
        android:id="@+id/first_page_cursor"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:scaleType="matrix"
        android:src="@drawable/cursor"
        android:contentDescription="@string/first_page_cursor_description"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/first_page_pager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
    	android:flipInterval="30"
    	android:persistentDrawingCache="animation"
        />
</LinearLayout>
