<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:id="@+id/tab_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/sumList"
            android:textColor="#000000"
            android:textSize="@dimen/viewpage_text_size" />

        <TextView
            android:id="@+id/tab_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/newList"
            android:textColor="#000000"
            android:textSize="@dimen/viewpage_text_size" />

        <TextView
            android:id="@+id/tab_rise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/riseList"
            android:textColor="#000000"
            android:textSize="@dimen/viewpage_text_size" />

    </LinearLayout>
    <ImageView 
        android:id="@+id/ranking_list_cursor"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:scaleType="matrix"
        android:src="@drawable/cursor"
        android:contentDescription="@string/ranking_list_cursor_description"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/ranking_list_pager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
    	android:flipInterval="30"
    	android:persistentDrawingCache="animation"
        />
</LinearLayout>
