<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/ScrollView01"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<RelativeLayout 
	    android:id="@+id/relative_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="70dp">
	    <ImageView 
	        android:id="@+id/beauty_avatar"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	        android:contentDescription="@string/avatar_description"/>
	    <TextView 
	        android:id="@+id/beauty_true_name"
	        android:layout_centerInParent="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/beauty_avatar"
	        android:text="疯狂豆芽"
	        android:paddingLeft="10dp"
	        android:textColor="#FF000000"
	        android:textSize="17sp"/>
	    <ImageButton 
	        android:id="@+id/praise_button"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_marginTop="5dp"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_praise_times"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/praise_button"
	        android:layout_alignParentRight="true"
	        android:text="已有？？人赞过"
	        android:textColor="#FF696969"/>
	</RelativeLayout>

	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/beauty_info_school_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/beauty_info_school"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_school"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/beauty_info_school_label"
	        android:text="广东外语外贸大学"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="50dp"/>
		<org.wheat.widget.DashedLine
		    android:id="@+id/dashline1"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_school"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_admission_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline1"
	        android:text="@string/beauty_info_admission_year"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_admission"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline1"
	        android:layout_toRightOf="@id/beauty_info_admission_label"
	        android:text="2014"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline2"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_admission"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_birthday_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline2"
	        android:text="@string/beauty_info_birthday"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_birthday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline2"
	        android:layout_toRightOf="@id/beauty_info_birthday_label"
	        android:text="9/12"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline3"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_birthday"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_constellation_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline3"
	        android:text="@string/beauty_info_constellation"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_constellation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline3"
	        android:layout_toRightOf="@id/beauty_info_constellation_label"
	        android:text="水瓶座"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline4"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_constellation"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_description_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline4"
	        android:text="@string/beauty_info_description"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_description"
	        android:layout_width="fill_parent"
	        android:layout_height="100dp"
	        android:layout_below="@id/dashline4"
	        android:layout_toRightOf="@id/beauty_info_description_label"
	        android:text="水瓶座"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"
	        android:singleLine="false"
	        android:scrollbars="vertical"
	        android:maxLines="15"
	        android:layout_marginRight="10dp"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline5"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_description"
	    	/>
	    <LinearLayout 
	        android:id="@+id/beauty_info_album"
	        android:layout_width="fill_parent"
	        android:layout_height="70dp"
	        android:layout_below="@id/dashline5"
	        android:orientation="horizontal"
	        android:clickable="true">
	        <TextView 
	        android:id="@+id/beauty_info_album_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/beauty_info_album"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="20dp"/>
	        <ImageView 
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="35dp"
	            android:contentDescription="@string/beauty_info_photo"/>
	        <ImageView 
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="10dp"
	            android:contentDescription="@string/beauty_info_photo"/>
	        <ImageView 
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="10dp"
	            android:contentDescription="@string/beauty_info_photo"/>
	    </LinearLayout>
	    
	</RelativeLayout>
</LinearLayout>
</ScrollView>
