<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
           <ImageView
           android:id="@+id/imageView1"
           android:layout_marginLeft="20dip"
           android:layout_marginRight="20dip"
           android:layout_width="300dip"
           android:layout_height="200dip"
           android:adjustViewBounds="true"
           android:background="@drawable/ic_launcher"
           android:maxHeight="1000dip"
           android:maxWidth="1500dip"
           android:scaleType="fitCenter" />

           
           <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/beauty_info_school_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/beauty_info_school"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_school"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/beauty_info_school_label"
	        android:text="广东外语外贸大学"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="50dp"/>
		<org.wheat.widget.DashedLine
		    android:id="@+id/dashline1"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_school"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_admission_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline1"
	        android:text="@string/beauty_info_admission_year"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_admission"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline1"
	        android:layout_toRightOf="@id/beauty_info_admission_label"
	        android:text="2014"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline2"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_admission"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_birthday_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline2"
	        android:text="@string/beauty_info_birthday"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_birthday"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline2"
	        android:layout_toRightOf="@id/beauty_info_birthday_label"
	        android:text="9/12"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline3"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_birthday"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_constellation_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline3"
	        android:text="@string/beauty_info_constellation"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_constellation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline3"
	        android:layout_toRightOf="@id/beauty_info_constellation_label"
	        android:text="水瓶座"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline4"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_constellation"
	    	/>
	    <TextView 
	        android:id="@+id/beauty_info_description_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/dashline4"
	        android:text="@string/beauty_info_description"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="10dp"/>
	    <TextView 
	        android:id="@+id/beauty_info_description"
	        android:layout_width="fill_parent"
	        android:layout_height="100dp"
	        android:layout_below="@id/dashline4"
	        android:layout_toRightOf="@id/beauty_info_description_label"
	        android:text="水瓶座"
	        android:textColor="#FF696969"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@id/beauty_info_school"
	        android:singleLine="false"
	        android:scrollbars="vertical"
	        android:maxLines="15"
	        android:layout_marginRight="10dp"/>
	    <org.wheat.widget.DashedLine
		    android:id="@+id/dashline5"
	    	android:layout_width="fill_parent"
	    	android:layout_height="3dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="10dp"
	    	android:layout_below="@id/beauty_info_description"
	    	/>
	    <LinearLayout 
	        android:id="@+id/beauty_info_album"
	        android:layout_width="fill_parent"
	        android:layout_height="70dp"
	        android:layout_below="@id/dashline5"
	        android:orientation="horizontal"
	        android:clickable="true">
	        <TextView 
	        android:id="@+id/beauty_info_album_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/beauty_info_album"
	        android:textColor="#FF000000"
	        android:layout_marginLeft="10dp"
	        android:layout_marginTop="20dp"/>
	        <ImageView 
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="35dp"
	            android:contentDescription="@string/beauty_info_photo"/>
	        <ImageView 
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="10dp"
	            android:contentDescription="@string/beauty_info_photo"/>
	        <ImageView 
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:layout_marginTop="5dp"
	            android:layout_marginBottom="5dp"
	            android:layout_marginLeft="10dp"
	            android:contentDescription="@string/beauty_info_photo"/>
	    </LinearLayout>
	    
	</RelativeLayout>
</LinearLayout>
